--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,14 @@ actix-web = "4.9.0"
 chrono = "0.4.38"
 config = "0.14.0"
 serde = { version = "1.0.210", features = ["derive"] }
+tracing = { version = "0.1.40", features = ["log"] }
+tracing-bunyan-formatter = "0.3.9"
+tracing-futures = "0.2.5"
+tracing-log = "0.2.0"
+tracing-subscriber = { version = "0.3.18", features = [
+    "registry",
+    "env-filter",
+] }
 uuid = { version = "1.11.0", features = ["v4"] }
 [dependencies.sqlx]
 version = "0.8.2"
