--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,11 @@ name = "zero2prod"
 actix-web = "4.9.0"
 chrono = "0.4.38"
 config = "0.14.0"
+log = "0.4.22"
 serde = { version = "1.0.210", features = ["derive"] }
+serde-aux = "4.5.0"
 tracing = { version = "0.1.40", features = ["log"] }
+tracing-actix-web = "0.7.14"
 tracing-bunyan-formatter = "0.3.9"
 tracing-futures = "0.2.5"
 tracing-log = "0.2.0"
@@ -38,5 +41,6 @@ features = [
 
 [dev-dependencies]
 actix-rt = "2.10.0"
+once_cell = "1.20.2"
 reqwest = "0.12.8"
 tokio = "1.40.0"
